fix clients table scrollbar style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -563,22 +563,24 @@ register-input-group-text i {
   border-top-right-radius: 0.3em;
 }
 /* Scrollbar */
+
 .table-wrapper::-webkit-scrollbar {
   width: 10px;
 }
 
 .table-wrapper::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #808080; 
+  box-shadow: inset 0 0 5px #103aad; 
   border-radius: 10px;
 }
  
 .table-wrapper::-webkit-scrollbar-thumb {
-  background: #26272773; 
+  background: #4aaaaa73; 
   border-radius: 10px;
+  box-shadow: 0 0 1px #ffffff80;
 }
 
 .table-wrapper::-webkit-scrollbar-thumb:hover {
-  background: #949596; 
+  background: #3a74af; 
 }
 /* Add a client */
 .add {
